--- a/MyTutorials/Index.html
+++ b/MyTutorials/Index.html
@@ -1,164 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INDEX</title>
+    <title>Test Practice</title>
 </head>
-
 <body>
-    <header>
-        <table border="0" width="100%" height="100px">
-            <tr>
-                <th><img src="../image/LOGO.jpg" height="50px"></th>
-                <th width="40%"></th>
-                <th width="10%" bgcolor="lightblue"><a href="../video/WelcomeToMyChannel.mp4"
-                        target="ContentFrame">HOME</a>
-                </th>
-                <th width="20%" bgcolor="yellow">
-                    <details>
-                        <summary>PRACTICE</summary>
-                        <ul style="text-align: left">
-                            <li><a href="../practice/01HTMLBasic.html" target="ContentFrame">HTML Basic</a></li>
-                            <li><a href="../practice/02HTMLFormating.html" target="ContentFrame">HTML
-                                    Formating</a></li>
-                            <li><a href="../practice/03ListPathImage.html" target="ContentFrame">List Path
-                                    Image</a></li>
-                            <li><a href="../practice/04PracticeTables.html" target="ContentFrame">Tables</a>
-                            </li>
-                            <li><a href="../practice/05HomeProject.html" target="ContentFrame">First Home
-                                    Project</a></li>
-                            <li><a href="../practice/06WEBPROJECT.HTML" target="ContentFrame">Web Project01</a>
-                            </li>
-                        </ul>
-                    </details>
-                </th>
-                <th width="10%" bgcolor="red">
-                    <details>
-                        <summary>TASK</summary>
-                        <ul style="text-align: left">
-                            <li><a href="../TASK/01Definitions.html" target="ContentFrame">Definitions</a></li>
-                            <li><a href="../TASK/02SelfIntroduction.html" target="ContentFrame">Self
-                                    Introduction</a></li>
-                            <li><a href="../TASK/03TypeOfListTask.html" target="ContentFrame">Type Of List</a>
-                            </li>
-                            <li><a href="../TASK/04TaskoftheDayStateandCapital.html" target="ContentFrame">State
-                                    & Capital</a>
-                            </li>
-                            <li><a href="../TASK/05TaskofTheDayPlanets.html" target="ContentFrame">Planets</a>
-                            </li>
-                            <li><a href="../TASK/06TableMergingTask.html" target="ContentFrame">Table
-                                    Merging</a>
-                            </li>
-                        </ul>
-                    </details>
-                </th>
-                <th width="10%" bgcolor="orange">
-                    <details>
-                        <summary>PROJECT</summary>
-                        <ul style="text-align: left">
-                            <li><a href="../PROJECT/01PROJECT.html" target="ContentFrame">01 Project</a></li>
-                        </ul>
-                    </details>
-                </th>
-                <th width="10%" bgcolor="lightblue"><a href="../TASK/02SelfIntroduction.html"
-                        target="ContentFrame">CONTACT</a></th>
-            </tr>
-        </table>
-    </header>
-    <hr>
-
-    <table border="0" width="100%" height="100%">
-        <tr>
-            <th width="20%" bgcolor="lightgray">
-                <table border="0" width="100%" Height="100%">
-                    <tr>
-                        <th height="10%">INDEX</th>
-                    </tr>
-                    <tr>
-                        <th height="10%" bgcolor="lightblue"><a href="../video/WelcomeToMyChannel.mp4"
-                                target="ContentFrame">HOME</a></th>
-                    </tr>
-                    <tr>
-                        <th style="text-align: center" height="30%" bgcolor="yellow">
-                            <details>
-                                <summary>PRACTICE</summary>
-                                <ul style="text-align: left">
-                                    <li><a href="../practice/01HTMLBasic.html" target="ContentFrame">HTML Basic</a></li>
-                                    <li><a href="../practice/02HTMLFormating.html" target="ContentFrame">HTML
-                                            Formating</a></li>
-                                    <li><a href="../practice/03ListPathImage.html" target="ContentFrame">List Path
-                                            Image</a></li>
-                                    <li><a href="../practice/04PracticeTables.html" target="ContentFrame">Tables</a>
-                                    </li>
-                                    <li><a href="../practice/05HomeProject.html" target="ContentFrame">First Home
-                                            Project</a></li>
-                                    <li><a href="../practice/06WEBPROJECT.HTML" target="ContentFrame">Web Project01</a>
-                                    </li>
-                                </ul>
-                            </details>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th height="30%" bgcolor="red">
-                            <details>
-                                <summary>TASK</summary>
-                                <ul style="text-align: left">
-                                    <li><a href="../TASK/01Definitions.html" target="ContentFrame">Definitions</a></li>
-                                    <li><a href="../TASK/02SelfIntroduction.html" target="ContentFrame">Self
-                                            Introduction</a></li>
-                                    <li><a href="../TASK/03TypeOfListTask.html" target="ContentFrame">Type Of List</a>
-                                    </li>
-                                    <li><a href="../TASK/04TaskoftheDayStateandCapital.html" target="ContentFrame">State
-                                            & Capital</a>
-                                    </li>
-                                    <li><a href="../TASK/05TaskofTheDayPlanets.html" target="ContentFrame">Planets</a>
-                                    </li>
-                                    <li><a href="../TASK/06TableMergingTask.html" target="ContentFrame">Table
-                                            Merging</a>
-                                    </li>
-                                </ul>
-                            </details>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th height="20%" bgcolor="orange">
-                            <details>
-                                <summary>PROJECT</summary>
-                                <ul style="text-align: left">
-                                    <li><a href="../PROJECT/01PROJECT.html" target="ContentFrame">01 Project</a></li>
-                                </ul>
-                            </details>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th bgcolor="lightblue"><a href="../TASK/02SelfIntroduction.html"
-                                target="ContentFrame">CONTACT</a></th>
-                    </tr>
-
-                </table>
-            </th>
-            <th width="80%">
-                <iframe name="ContentFrame" width="100%" height="500px"></iframe>
-            </th>
-        </tr>
-    </table>
-    <hr>
-    <footer bgcolor="lightgray">
-        <div Style="text-align:center">
-            <h2>Contact Me</h2>
-            <p>If you would like to get in touch, feel free to<br>
-                <abbr title="piyush.r.tripathi@gmail.com">
-                    <h2>&gt;EMAIL ME&lt;</h2><br>
-                    piyush.r.tripathi@gmail.com
-                </abbr>.
-            </p>
-        </div>
-        <div Style="text-align:center">
-            <p> &gt;<b>Copyright 2024</b> <i>Piyush Tripathi. All Rights Reserved.</i>&lt;</p>
-        </div>
-    </footer>
+<header style="text-align: center">
+<table border="0" width="100%" height="100px" bgcolor="#f5f3f2">
+<tr>
+<th width="20%"><img src="../image/TECHFSDLOGO.jpg" atl="This is TECHFSDLOGO" width="261px" height="90px"></th>
+<th width="30%"></th>
+<th width="10%"><a href="../video/TECHFSD0.5.mp4" target="ContentFrame">HOME</a></th>
+<th width="10%"><a href="../PRACTICE/14Practice.html" target="ContentFrame2">PRACTICE</a></th>
+<th width="10%"><a href="../Practice/15Task.html" target="ContentFrame2">TASK</a></th>
+<th width="10%"><a href="../practice/16Project.html" target="ContentFrame2">PROJECT</a></th>
+<th width="10%"><a href="../task/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></th>
+</tr>
+</table></header>
+<hr>
+<table border="0" width="100%" height="400px" bgcolor="#9c9694">
+<tr>
+<th width="20%" style="text-align: center">
+<table border="0" width="100%" height="100%" bgcolor="#f5f3f2">
+<tr>
+    <th width="100%" height="30px">INDEX</th>
+</tr>
+<tr width="100%" height="20px"><td><a href="../video/TECHFSD0.5.mp4" target="ContentFrame">HOME</a></td></tr>
+<tr width="100%" height="300px"><td><iframe name="ContentFrame2" width="100%" Height="100%"></iframe></td></tr>
+<tr width="100%" height="20px"><td><a href="../task/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></td></tr>
+</table>    
+</th>
+<th width="80%">
+<iframe name="ContentFrame" width="100%" height="100%"></iframe>    
+</th>
+</tr>
+</table>
+<hr>
+<footer style="text-align: center" bgcolor="#c3c5f7">
+<h2>Contact Me @</h2>
+<p>piyush.r.tripathi@gmail.com</p>
+<p> &gt;<b>Copyright 2024:</b> <i>Piyush Tripathi: All Rights Reserved.</i>&lt;</p>
+</footer>
 </body>
-
 </html>
