--- a/PRACTICE/11Practicepage.html
+++ b/PRACTICE/11Practicepage.html
@@ -1,67 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice Page</title>
+    <title>Test Practice</title>
 </head>
-
 <body>
-    <div style="text-align: center;">
-        <h1>Table & Forms</h1>
-    </div>
-    <blockquote content="width=device-width" initial-scale="1.0">
-        <table border="1" align="center" width="60%" style="text-align: center;" height="100px">
-            <caption><b>Table with anchor and form input Tag</b></caption>
-            <tr>
-                <th align="center"><a href="#Header">Header</a></th>
-                <th align="center"><a href="#Background">Background</a></th>
-                <th align="center"><a href="#text">Text</a></th>
-                <th align="center"><a href="#Footer">Footer</a></th>
-            </tr>
-            <tr>
-                <td><input type="color" id="header" name="header" value="#ff0000"></td>
-                <td><input type="color" id="Background" name="Background" value="#00ff00"></td>
-                <td><input type="color" id="text" name="text" value="#0000ff"></td>
-                <td><input type="color" id="footer" name="footer" value="#ffff00"></td>
-            </tr>
-        </table>
-    </blockquote>
-
-
-    <hr>
-    <div style="text-align: center;">Table with </div>
-    <blockquote content="width=device-width" initial-scale="1.0">
-        <h2>New Table</h2>
-        <table border="1" align="center" width="60%" style="text-align: center;" height="100px">
-            <tr>
-                <th>Outbox
-            
-                <td><input type="color" id="header" name="header" value="#ff0000"><br>
-                    <input type="color" id="Background" name="Background" value="#00ff00"><br>
-                    <input type="color" id="text" name="text" value="#0000ff"><br>
-                    <input type="color" id="footer" name="footer" value="#ffff00">
-                </td>
-            
-            </th>
-            </tr>
-            <tr>
-                <td><input type="color" id="header" name="header" value="#ff0000"><br>
-                    <input type="color" id="Background" name="Background" value="#00ff00"><br>
-                    <input type="color" id="text" name="text" value="#0000ff"><br>
-                    <input type="color" id="footer" name="footer" value="#ffff00">
-                </td>
-            </tr>
-
-
-
-        </table>
-
-    </blockquote>
-
-
-
+<header style="text-align: center">
+<table border="1" width="100%" height="100px">
+<tr>
+<th><img src="../image/TECHFSDLOGO.jpg" atl="This is TECHFSDLOGO" width="261px" height="90px"></th>
+<th></th>
+<th><a href="../video/TECHFSD0.5.mp4" target="ContentFrame">HOME</a></th>
+<th><a href="14Practice.html" target="ContentFrame2">PRACTICE</a></th>
+<th>TASK</th>
+<th>PROJECT</th>
+<th><a href="../task/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></th>
+</tr>
+</table></header>
+<hr>
+<table border="1" width="100%" height="400px">
+<tr>
+<th width="20%" style="text-align: center">
+<table border="1" width="100%" height="100%">
+<tr>
+    <th width="100%" height="30px">INDEX</th>
+</tr>
+<tr width="100%" height="20px"><td><a href="../video/TECHFSD0.5.mp4" target="ContentFrame">HOME</a></td></tr>
+<tr width="100%" height="300px"><td><iframe name="ContentFrame2" width="100%" Height="100%"></iframe></td></tr>
+<tr width="100%" height="20px"><td><a href="../task/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></td></tr>
+</table>    
+</th>
+<th width="80%">
+<iframe name="ContentFrame" width="100%" height="100%"></iframe>    
+</th>
+</tr>
+</table>
+<hr>
+<footer style="text-align: center">
+<h2>Contact Me @</h2>
+<p>piyush.r.tripathi@gmail.com</p>
+<p>Copyright @TECH FSD</p>
+</footer>
 </body>
-
 </html>
