--- a/PRACTICE/14Practice.html
+++ b/PRACTICE/14Practice.html
@@ -6,6 +6,7 @@
     <title>Practice List</title>
 </head>
 <body>
+<h3>PRACTICE LIST</h3>
 <ul>
     <li><a href="../html/01HtmlBasic.html" target="ContentFrame">HTML Basic</a></li>
     <li><a href="../html/02TagsAndElement.html" target="ContentFrame">Tags & Elements</a></li>
