--- a/PRACTICE/14Practice.html
+++ b/PRACTICE/14Practice.html
@@ -19,6 +19,19 @@
     <li><a href="../html/09AnchorTag.html" target="ContentFrame">Anchor Tags</a></li>
     <li><a href="../html/10AnchorImage.html" target="ContentFrame">Anchor Image</a></li>
     <li><a href="../html/11ImageMap.html" target="ContentFrame">Image Map</a></li>
-</ul>    
+</ul>
+<h3>TASK LIST</h3>
+<ol>
+    <li><a href="../task/01Definitions.html" target="ContentFrame">Definitions</a></li>
+    <li><a href="../task/03TypeOfListTask.html" target="ContentFrame">Type Of List</a></li>
+    <li><a href="../task/04TaskoftheDayStateandCapital.html" target="ContentFrame">Page State & Capital Table</a></li>
+    <li><a href="../task/05TaskofTheDayPlanets.html" target="ContentFrame">Page Planets</a></li>
+    <li><a href="../task/06TableMergingTask.html" target="ContentFrame">Table Merging</a></li>
+    <li><a href="../task/07Form GET.html" target="ContentFrame">Form</a></li>
+</ol>    
+<h3>PROJECT LIST</h3>
+<ul>
+    <li><a href="../PROJECT/01PROJECT.html" target="ContentFrame">01 WebPage</a></li>
+</ul>       
 </body>
 </html>
