--- a/PRACTICE/15Task.html
+++ b/PRACTICE/15Task.html
@@ -14,6 +14,24 @@
     <li><a href="../task/05TaskofTheDayPlanets.html" target="ContentFrame">Page Planets</a></li>
     <li><a href="../task/06TableMergingTask.html" target="ContentFrame">Table Merging</a></li>
     <li><a href="../task/07Form GET.html" target="ContentFrame">Form</a></li>
-</ol>    
+</ol>
+<h3>PRACTICE LIST</h3>
+<ul>
+    <li><a href="../html/01HtmlBasic.html" target="ContentFrame">HTML Basic</a></li>
+    <li><a href="../html/02TagsAndElement.html" target="ContentFrame">Tags & Elements</a></li>
+    <li><a href="../html/03HeadingParagraph.html" target="ContentFrame">Heading Paragraph</a></li>
+    <li><a href="../html/04BasicTags.html" target="ContentFrame">Basic Tags</a></li>
+    <li><a href="../html/05BlocklevelVsInlineTag.html" target="ContentFrame">Block Level Vs inline Tags</a></li>
+    <li><a href="../html/06List.html" target="ContentFrame">List</a></li>
+    <li><a href="../html/07Path.html" target="ContentFrame">Path</a></li>
+    <li><a href="../html/08Image.html" target="ContentFrame">Image</a></li>
+    <li><a href="../html/09AnchorTag.html" target="ContentFrame">Anchor Tags</a></li>
+    <li><a href="../html/10AnchorImage.html" target="ContentFrame">Anchor Image</a></li>
+    <li><a href="../html/11ImageMap.html" target="ContentFrame">Image Map</a></li>
+</ul>
+<h3>PROJECT LIST</h3>
+<ul>
+    <li><a href="../PROJECT/01PROJECT.html" target="ContentFrame">01 WebPage</a></li>
+</ul>      
 </body>
 </html>
