--- a/PRACTICE/16Project.html
+++ b/PRACTICE/16Project.html
@@ -9,6 +9,29 @@
     <h3>PROJECT LIST</h3>
 <ul>
     <li><a href="../PROJECT/01PROJECT.html" target="ContentFrame">01 WebPage</a></li>
-</ul>    
+</ul> 
+<h3>PRACTICE LIST</h3>
+<ul>
+    <li><a href="../html/01HtmlBasic.html" target="ContentFrame">HTML Basic</a></li>
+    <li><a href="../html/02TagsAndElement.html" target="ContentFrame">Tags & Elements</a></li>
+    <li><a href="../html/03HeadingParagraph.html" target="ContentFrame">Heading Paragraph</a></li>
+    <li><a href="../html/04BasicTags.html" target="ContentFrame">Basic Tags</a></li>
+    <li><a href="../html/05BlocklevelVsInlineTag.html" target="ContentFrame">Block Level Vs inline Tags</a></li>
+    <li><a href="../html/06List.html" target="ContentFrame">List</a></li>
+    <li><a href="../html/07Path.html" target="ContentFrame">Path</a></li>
+    <li><a href="../html/08Image.html" target="ContentFrame">Image</a></li>
+    <li><a href="../html/09AnchorTag.html" target="ContentFrame">Anchor Tags</a></li>
+    <li><a href="../html/10AnchorImage.html" target="ContentFrame">Anchor Image</a></li>
+    <li><a href="../html/11ImageMap.html" target="ContentFrame">Image Map</a></li>
+</ul>
+<h3>TASK LIST</h3>
+<ol>
+    <li><a href="../task/01Definitions.html" target="ContentFrame">Definitions</a></li>
+    <li><a href="../task/03TypeOfListTask.html" target="ContentFrame">Type Of List</a></li>
+    <li><a href="../task/04TaskoftheDayStateandCapital.html" target="ContentFrame">Page State & Capital Table</a></li>
+    <li><a href="../task/05TaskofTheDayPlanets.html" target="ContentFrame">Page Planets</a></li>
+    <li><a href="../task/06TableMergingTask.html" target="ContentFrame">Table Merging</a></li>
+    <li><a href="../task/07Form GET.html" target="ContentFrame">Form</a></li>
+</ol>       
 </body>
 </html>
