--- a/MyTutorials/Index.html
+++ b/MyTutorials/Index.html
@@ -6,32 +6,46 @@
     <title>Test Practice</title>
 </head>
 <body>
+    <!--Creating Header and inside header a table-->
 <header style="text-align: center">
+    <!--Set parameters in Table border, width 100% Height 100px and color-->
 <table border="0" width="100%" height="100px" bgcolor="#f5f3f2">
 <tr>
-<th width="20%"><img src="../image/TECHFSDLOGO.jpg" atl="This is TECHFSDLOGO" width="261px" height="90px"></th>
+    <!--Creating first link and logo insert with img insert dont forget to give alt. or information of logo.-->
+    <!-- to fit the size height of 100px put 90 px as height of logo-->
+<th width="20%"><img src="../image/TECHFSDLOGO.jpg" alt="This is TECHFSDLOGO" width="261px" height="90px"></th>
 <th width="30%"></th>
+<!--leave a blank portion after this using ancher tag use with target as location where you want the 
+link to open.here we have indicated target as iframe ContentFrame-->
 <th width="10%"><a href="../video/TECHFSD0.5.mp4" target="ContentFrame">HOME</a></th>
+<!--now link in content frame. create or insert a list page here have used file no. 14, 15, 16
+of practice creating list using simple ul and ol artibutes and tag creating 2nd Ifraem ContentFrame2-->
 <th width="10%"><a href="../PRACTICE/14Practice.html" target="ContentFrame2">PRACTICE</a></th>
 <th width="10%"><a href="../Practice/15Task.html" target="ContentFrame2">TASK</a></th>
 <th width="10%"><a href="../practice/16Project.html" target="ContentFrame2">PROJECT</a></th>
 <th width="10%"><a href="../task/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></th>
 </tr>
 </table></header>
+<!--Close The table and header creating ling or devide with hr.-->
 <hr>
+<!-- insert table again 20% and 80 % division. with 100% Width of entire table.-->
 <table border="0" width="100%" height="400px" bgcolor="#9c9694">
 <tr>
+<!--This 20 % is your Index and ContentFrame2 Iframe.-->
 <th width="20%" style="text-align: center">
 <table border="0" width="100%" height="100%" bgcolor="#f5f3f2">
 <tr>
     <th width="100%" height="30px">INDEX</th>
 </tr>
+<!--This 20 % is your Index and ContentFrame2 Iframe. and Contact-->
+<!--The link here will be target loction to open here like home and contact is given link as ContentFrame-->
 <tr width="100%" height="20px"><td><a href="../video/TECHFSD0.5.mp4" target="ContentFrame">HOME</a></td></tr>
 <tr width="100%" height="300px"><td><iframe name="ContentFrame2" width="100%" Height="100%"></iframe></td></tr>
 <tr width="100%" height="20px"><td><a href="../task/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></td></tr>
 </table>    
 </th>
 <th width="80%">
+    <!--This 80 % is your ContentFrame Iframe location that displays link clicked on top header and on link inserted in anchor tag .-->
 <iframe name="ContentFrame" width="100%" height="100%"></iframe>    
 </th>
 </tr>
