--- a/MyTutorials/Index.html
+++ b/MyTutorials/Index.html
@@ -9,7 +9,7 @@
     <!--Creating Header and inside header a table-->
 <header style="text-align: center">
     <!--Set parameters in Table border, width 100% Height 100px and color-->
-<table border="0" width="100%" height="100px" bgcolor="#f5f3f2">
+<table border="0" width="100%" height="100px" bgcolor="white">
 <tr>
     <!--Creating first link and logo insert with img insert dont forget to give alt. or information of logo.-->
     <!-- to fit the size height of 100px put 90 px as height of logo-->
@@ -17,13 +17,13 @@
 <th width="30%"></th>
 <!--leave a blank portion after this using ancher tag use with target as location where you want the 
 link to open.here we have indicated target as iframe ContentFrame-->
-<th width="10%"><a href="../video/TECHFSD0.5.mp4" target="ContentFrame">HOME</a></th>
+<th width="10%"><a href="../video/TECHFSD0.5.mp4" target="ContentFrame"><button>HOME</button></a></th>
 <!--now link in content frame. create or insert a list page here have used file no. 14, 15, 16
 of practice creating list using simple ul and ol artibutes and tag creating 2nd Ifraem ContentFrame2-->
-<th width="10%"><a href="../PRACTICE/14Practice.html" target="ContentFrame2">PRACTICE</a></th>
-<th width="10%"><a href="../Practice/15Task.html" target="ContentFrame2">TASK</a></th>
-<th width="10%"><a href="../practice/16Project.html" target="ContentFrame2">PROJECT</a></th>
-<th width="10%"><a href="../task/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></th>
+<th width="10%"><a href="../PRACTICE/14Practice.html" target="ContentFrame2"><button>PRACTICE</button></a></th>
+<th width="10%"><a href="../Practice/15Task.html" target="ContentFrame2"><button>TASK</button></a></th>
+<th width="10%"><a href="../practice/16Project.html" target="ContentFrame2"><button>PROJECT</button></a></th>
+<th width="10%"><a href="../task/02SelfIntroduction.html" target="ContentFrame"><button>CONTACT</button></a></th>
 </tr>
 </table></header>
 <!--Close The table and header creating ling or devide with hr.-->
@@ -39,9 +39,9 @@ of practice creating list using simple ul and ol artibutes and tag creating 2nd 
 </tr>
 <!--This 20 % is your Index and ContentFrame2 Iframe. and Contact-->
 <!--The link here will be target loction to open here like home and contact is given link as ContentFrame-->
-<tr width="100%" height="20px"><td><a href="../video/TECHFSD0.5.mp4" target="ContentFrame">HOME</a></td></tr>
+<tr width="100%" height="20px"><td><a href="../video/TECHFSD0.5.mp4" target="ContentFrame"><button>HOME</button></a></td></tr>
 <tr width="100%" height="300px"><td><iframe name="ContentFrame2" width="100%" Height="100%"></iframe></td></tr>
-<tr width="100%" height="20px"><td><a href="../task/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></td></tr>
+<tr width="100%" height="20px"><td><a href="../task/02SelfIntroduction.html" target="ContentFrame"><button>CONTACT</button></a></td></tr>
 </table>    
 </th>
 <th width="80%">
