--- a/PRACTICE/18Loginpage.html
+++ b/PRACTICE/18Loginpage.html
@@ -12,7 +12,7 @@
             <th width="20%"><h1><img src="../image/TECHFSDLOGO.jpg" width="261" height="90px"></h1></th>
             <th width="20%"><h1></h1></th>
             <th width="10%"><h3><a href="../Task/02SelfIntroduction.html" target="MyDisplay">HOME</a></h3></th>
-            <th width="10%"><h3><a href="../MyTutorials/Index.html" target="MyDisplay">About us</a></h3></th>
+            <th width="10%"><h3><a href="https://pizzaonline.dominos.co.in/menu" target="MyDisplay">About us</a></h3></th>
             <th width="10%">Login</th>
             <th width="10%" target="MyDisplay"><h3>Contact Us</h3></th>
         </tr>
