--- a/PRACTICE/Test.html
+++ b/PRACTICE/Test.html
@@ -15,8 +15,8 @@
             <label for="Delivery">Delivery</label>
             <input type="radio" id="Pickup/Dine-in" name="Select" value="Pickup/Dine-in">
             <label for="Pickup/Dine-in">Pickup/Dine-in</label></button></th>
-        <th width="20%">Form display of loction</th>
-        <th width="10%">My Account</th>
+        <th width="20%"><button>Form display of loction</button></th>
+        <th width="10%"><button>My Account</button></th>
     </tr></table></nav>
 </header>    
 <hr>
