--- a/TASK/08DominosClone.html
+++ b/TASK/08DominosClone.html
@@ -40,17 +40,17 @@
             <table border="0" width="100%" height="10px">
                 <tr>
                     <!--Click on the menu button and each menu opens. each menu will have tabe dropdown as wel with image of customize-->
-                    <th width="9%"><button><a href="#EveryDayValue" Target="EveryDayValue" width="100%" height="100%">Every Day Value</a></button></th>
+                    <th width="9%"><button><a href="#EverydayValue" Target="EveryDayValue" width="100%" height="100%">Every Day Value</a></button></th>
                     <th width="9%"><button><a href="#Recommended" Target="Recommended" width="100%" height="100%">Recommended</a></button></th>
-                    <th width="9%"><button><a href="#New Launches" Target="New Launches" width="100%" height="100%">New Launches</a></button></th>
-                    <th width="9%"><button><a href="#Ragi Pizza" Target="Ragi Pizza" width="100%" height="100%">Ragi Pizza</a></button></th>
-                    <th width="9%"><button><a href="#Veg Pizza" Target="Veg Pizza" width="100%" height="100%">Veg Pizza</a></button></th>
-                    <th width="9%"><button><a href="#Bevarages" Target="Bevarages" width="100%" height="100%">Bevarages</a></button></th>
+                    <th width="9%"><button><a href="#NewLaunches" Target="NewLaunches" width="100%" height="100%">New Launches</a></button></th>
+                    <th width="9%"><button><a href="#RagiPizza" Target="RagiPizza" width="100%" height="100%">Ragi Pizza</a></button></th>
+                    <th width="9%"><button><a href="#VegPizza" Target="VegPizza" width="100%" height="100%">Veg Pizza</a></button></th>
+                    <th width="9%"><button><a href="#Beverages" Target="Beverages" width="100%" height="100%">Bevarages</a></button></th>
                     <th width="9%"><button><a href="#Sides" Target="Sides" width="100%" height="100%">Sides</a></button></th>
-                    <th width="9%"><button><a href="#Pizza Mania" Target="Pizza Mania" width="100%" height="100%">Pizza Mania</a></button></th>
-                    <th width="9%"><button><a href="#Value Combos" Target="Value Combos" width="100%" height="100%">Value Combos</a></button></th>
+                    <th width="9%"><button><a href="#PizzaMania" Target="PizzaMania" width="100%" height="100%">Pizza Mania</a></button></th>
+                    <th width="9%"><button><a href="#ValueCombos" Target="ValueCombos" width="100%" height="100%">Value Combos</a></button></th>
                     <th width="9%"><button><a href="#Desserts" Target="Desserts" width="100%" height="100%">Desserts</a></button></th>
-                    <th width="9%"><button><a href="#No Onion No Garlic" Target="No Onion No Garlic" width="100%" height="100%">No Onion No Garlic</a></button></th>
+                    <th width="9%"><button><a href="#NoOnionNoGarlic" Target="NoOnionNoGarlic" width="100%" height="100%">No Onion No Garlic</a></button></th>
                 </tr>
             </table>
         </nav>
@@ -177,6 +177,27 @@
             
         </tr>
     </table>
+<hr>
+<footer>
+
+    <nav>
+        <table border="0" width="100%" height="10px" style="background-image: url(../IMAGE/FooterColor.png);">
+            <tr>
+                <th width="9%"><img src="../image/DominosLOGO.svg"></th>
+                <th width="9%"><button><a href="#Disclaimer" Target="Disclaimer" width="100%" height="100%">Disclaimer</a></button></th>
+                <th width="9%"><button><a href="#PrivacyPolicy" Target="PrivacyPolicy" width="100%" height="100%">PrivacyPolicy</a></button></th>
+                <th width="9%"><button><a href="#Faq" Target="Faq" width="100%" height="100%">FAQ</a></button></th>
+                <th width="9%"><button><a href="#Terms&Conditions" Target="Terms&Conditions" width="100%" height="100%">Terms & Conditions</a></button></th>
+                <th width="9%"><button><a href="#NutritionalInformation" Target="NutritionalInformation" width="100%" height="100%">Nutritional Information</a></button></th>
+                <th width="9%"><button><a href="#Feedback" Target="Feedback" width="100%" height="100%">Feedback</a></button></th>
+                <th width="9%"></th>
+                <th width="9%"></th>
+                <th width="9%"></th>
+                <th width="9%">DOWNLOAD APP</th>
+            </tr>
+        </table>
+    </nav>    
+</footer>
 </body>
 
 </html>
